--- a/utt-simple-web3js/package.json
+++ b/utt-simple-web3js/package.json
@@ -7,12 +7,14 @@
   "scripts": {
     "compile": "truffle compile",
     "deploy": "truffle deploy",
+    "test": "truffle test --show-events",
     "build": "webpack --config webpack.config.js",
     "serve": "node ./dev-server.js"
   },
   "author": "Martino BETTUCCI",
   "license": "ISC",
   "dependencies": {
+    "@openzeppelin/contracts": "^4.9.6",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "jquery": "^3.6.4",
